# am2am

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
sample/: alert-payload.json  alertmanager1.yml  alertmanager2.yml  docker-compose.yml
src/: main.rs
