[package]
name = "am2am"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
yaml-rust = "0.4"
