[package]
name = "am2am"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.7"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
yaml-rust = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
