[package]
name = "am2am"
version = "0.1.10"
edition = "2021"
homepage = "https://github.com/opsplane-services/am2am"
repository = "https://github.com/opsplane-services/am2am"
readme = "README.md"
license = "MIT"
description = "A proxy that is designed to handle incoming webhooks from Alertmanager and forward them to another Alertmanager instance"

[dependencies]
axum = "0.7"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
yaml-rust = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
